# correct_language_validator

./: .gitignore  README.md  pyproject.toml
test/: test_validator.py
validator/: main.py
